--- a/satysfi-matrixcd.opam
+++ b/satysfi-matrixcd.opam
@@ -9,9 +9,9 @@ bug-reports: "https://github.com/abenori/satysfi-matrixcd/issues"
 dev-repo: "git+https://github.com/abenori/satysfi-matrixcd.git"
 license: "BSD-2-Clause-FreeBSD"
 depends: [
-  "satysfi" {>= "0.0.4"}
-  "satysfi-base"
-  "satyrographos"
+  "satysfi" {>= "0.0.4" & < "0.0.6"}
+  "satysfi-base" {= "1.3.0"}
+  "satyrographos" {>= "0.0.2.0" & < "0.0.3.0"}
 ]
 build: [ ]
 install: [
