--- a/satysfi-matrixcd.opam
+++ b/satysfi-matrixcd.opam
@@ -1,6 +1,6 @@
 opam-version: "2.0"
 name: "satysfi-matrixcd"
-version: "0.0.2"
+version: "0.0.3"
 synopsis: "A package for SATySFi to draw commutative diagrams"
 authors: "Noriyuki Abe"
 maintainer: "Noriyuki Abe"
@@ -9,8 +9,8 @@ bug-reports: "https://github.com/abenori/satysfi-matrixcd/issues"
 dev-repo: "git+https://github.com/abenori/satysfi-matrixcd.git"
 license: "BSD-2-Clause-FreeBSD"
 depends: [
-  "satysfi" {>= "0.0.4" & < "0.0.6"}
-  "satysfi-base" {= "1.3.0"}
+  "satysfi" {>= "0.0.6" & < "0.0.7"}
+  "satysfi-base" {>= "1.3.0" & < "1.5.0"}
   "satyrographos" {>= "0.0.2.0" & < "0.0.3.0"}
 ]
 build: [ ]
