--- a/satysfi-matrixcd-doc.opam
+++ b/satysfi-matrixcd-doc.opam
@@ -1,8 +1,8 @@
 opam-version: "2.0"
-name: "satysfi-matrixcd"
+name: "satysfi-matrixcd-doc"
 version: "0.1.0"
-synopsis: "A package for SATySFi to draw commutative diagrams"
-description: """A package for SATySFi to draw commutative diagrams"""
+synopsis: "Document of MatrixCD"
+description: """Document of MatrixCD package"""
 authors: "Noriyuki Abe"
 maintainer: "Noriyuki Abe"
 homepage: "https://github.com/abenori/satysfi-matrixcd/"
@@ -13,17 +13,19 @@ depends: [
   "satysfi" {>= "0.0.6" & < "0.0.8"}
   "satysfi-base" {>= "1.3.0" & < "1.5.0"}
   "satyrographos" {>= "0.0.2.0" & < "0.0.3.0"}
+  "satysfi-dist"
+  "satysfi-matrixcd" {= "%{version}%"}
 ]
 build: [
   ["satyrographos" "opam" "build"
-   "--name" "matrixcd"
+   "--name" "matrixcd-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
 ]
 
 install: [
   ["satyrographos" "opam" "install"
-   "--name" "matrixcd"
+   "--name" "matrixcd-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
 ]
